--- a/PetNaturals/vite-project/src/App.css
+++ b/PetNaturals/vite-project/src/App.css
@@ -1,23 +1,12 @@
 #root {
-  max-width: 1140px;
+  /* max-width: 1140px; */
   margin: 0 auto;
  
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
+/* 
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -39,4 +28,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
