--- a/PetNaturals/vite-project/src/component/FirstScreen/FirstScreen.scss
+++ b/PetNaturals/vite-project/src/component/FirstScreen/FirstScreen.scss
@@ -3,9 +3,41 @@ background-image: url(../../assets/—Pngtree—green-fresh-sky-grass-illustrati
 background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
+//  max-width: 1140px;
 height: 100vh;
-width: 100vw;
-
-
-
+//  filter: brightness(80%);
+position: relative;
+z-index: 1;
+&::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    // background-image: url(../../assets/—Pngtree—green-fresh-sky-grass-illustration_920699-1.webp);
+    z-index: 2;
+}
+&__title{
+    color:#F9E994;
+    font-size: 52px;
+    width: 578px;
+    text-align: center;
+    margin: 0 auto;
+    z-index: 5;
+    filter:drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
            }
+           h3{
+               color:#F6F7E4;
+               font-size: 26px;
+               filter:drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+               padding-bottom: 60px;
+           }
+           &__box{
+            width: 440px;
+        
+           }
+           ul{
+               list-style: none;
+           }
+        }
