--- a/PetNaturals/vite-project/src/component/FirstScreen/Header/Header.scss
+++ b/PetNaturals/vite-project/src/component/FirstScreen/Header/Header.scss
@@ -1,7 +1,38 @@
-.header{
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+
+  ul {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-    width: 100%;
+    list-style: none;
+    z-index: 2;
+    position: relative;
+
+    li {
+      padding: 0 51px;
+      font-size: 20px;
+      font-weight: 600;
+      cursor: pointer;
+      text-transform: uppercase;
+      text-decoration: underline;
+      color: #715d00;
+    }
+  }
+
+  &__logo {
+    padding: 4% 0 0 10%;
+    width: 25%;
+    opacity: 0.7;
+  }
+
+  &__sky {
+    position: absolute;
+    z-index: 1;
+    right: 0;
+    top: 6%;
+
+    width: 40%;
+  }
 }
