--- a/PetNaturals/vite-project/src/component/FirstScreen/Header/Header.scss
+++ b/PetNaturals/vite-project/src/component/FirstScreen/Header/Header.scss
@@ -3,15 +3,16 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-
+position: relative;
   ul {
+    
     display: flex;
     list-style: none;
     z-index: 2;
-    position: relative;
+    
 
     li {
-      padding: 0 51px;
+      padding: 0 35px;
       font-size: 20px;
       font-weight: 600;
       cursor: pointer;
@@ -30,9 +31,8 @@
   &__sky {
     position: absolute;
     z-index: 1;
-    right: 0;
-    top: 6%;
-
+   right: 3%;
+    top: 25%;
     width: 40%;
   }
 }
