--- a/PetNaturals/vite-project/src/component/FirstScreen/Header/Header.scss
+++ b/PetNaturals/vite-project/src/component/FirstScreen/Header/Header.scss
@@ -4,21 +4,23 @@
   align-items: center;
   padding: 0 20px;
 position: relative;
-  ul {
+  nav {
     
     display: flex;
     list-style: none;
     z-index: 2;
     
 
-    li {
+    a {
       padding: 0 35px;
       font-size: 20px;
       font-weight: 600;
-      cursor: pointer;
+      // cursor: pointer;
       text-transform: uppercase;
       text-decoration: underline;
       color: #715d00;
+      
+      
     }
   }
 
