--- a/PetNaturals/vite-project/src/component/FirstScreen/FirstScreen.scss
+++ b/PetNaturals/vite-project/src/component/FirstScreen/FirstScreen.scss
@@ -1,4 +1,5 @@
 .firstScreenSection {
+  
   background-image: url(../../assets/—Pngtree—green-fresh-sky-grass-illustration_920699-2.webp);
   background-repeat: no-repeat;
   background-size: cover;
@@ -31,7 +32,7 @@
     color: #f6f7e4;
     font-size: 26px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    padding-bottom: 60px;
+    padding-bottom: 15%;
   }
   &__box {
     width: 400px;
@@ -67,7 +68,6 @@
     object-fit: cover;
     z-index: 1;
     &.corm {
-    //   margin: 0 auto;
     top:57%;
     left:50%;
     transform: translate(-50%, -50%);
@@ -88,5 +88,79 @@
       max-width: 320px;
       z-index: 4;
     }}
+    &__form{
+        position: absolute;
+        top: 55%;
+        left: 81%;
+        transform: translate(-50%, -50%);
+        z-index: 3;
+        max-width:fit-content;
+        background-color: #FDFCFC;
+        border-radius: 10px;
+        &_input {
+          margin: 3%;
+          padding: 5%;
+          position: relative;
+         max-width: 150px;
+          &::before{
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 10%;
+            width: 100%;
+            height: 100%;
+            background-image: url(../../assets/icons.webp) no-repeat center center; 
+            background-size: contain;
+          }
+        }
+         &_btn{
+          margin: 15px 0 30px;
+          width: 180px;
+          padding: 1% 20%;
+          border-radius: 20px;
+            background-color: #A1D337;
+            color: #FFFF;
+            font-size: 30px;
+           }
+        &_top{
+          display: flex;
+          flex-direction: column;
+          background-color: #7EB2E1;
+          border-radius: 10px;
+          filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        &_title{
+          color: #483C08;
+          font-size: 33px;
+          &_span{
+            color: #6B6B6B;
+           position: relative;
+           &::after{
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            rotate: -15deg;
+            background-color: #F6BE91;
+            transform: translateY(-50%);
+           }
+          
+          }
+        }
+    }
+    &__flex{
+display: flex;
+    }
   }
 
+}
+#countdown{
+  color:#F6E791;
+  font-size: 36px;
+}
+#today_date{
+  color:#444444;
+  font-size: 18px;
+  height: 30px;
+}
