--- a/PetNaturals/vite-project/src/css/FirstScreen.scss
+++ b/PetNaturals/vite-project/src/css/FirstScreen.scss
@@ -76,7 +76,7 @@
       margin: 15% auto;
     }
     & li {
-      background-image: url(../../../assets/pngwing.com.webp);
+      background-image: url(../assets/pngwing.com.webp);
       background-repeat: no-repeat;
       padding-left: 20px;
       background-size: 15px;
@@ -227,7 +227,7 @@
         left: 10%;
         width: 100%;
         height: 100%;
-        background-image: url(../../../assets/icons.webp) no-repeat center center;
+        background-image: url(../assets/icons.webp) no-repeat center center;
         background-size: contain;
       }
     }
