--- a/src/css/FirstScreen.scss
+++ b/src/css/FirstScreen.scss
@@ -76,7 +76,7 @@
       margin: 15% auto;
     }
     & li {
-      background-image: url(../../../assets/pngwing.com.webp);
+      background-image: url(../assets/pngwing.com.webp);
       background-repeat: no-repeat;
       padding-left: 20px;
       background-size: 15px;
